# ComfyUI-FatMex-Nodes

./: LICENSE  README.md  __init__.py  nodes_dataset.py  nodes_faceswap.py  nodes_loader.py  nodes_mask.py  nodes_prompt.py  nodes_sampler.py  nodes_upscale.py  presets.py  pyproject.toml  requirements.txt
workflows/: fatmex_qwen2511_dataset_gen.json  free_klein_generator.json  free_quick_faceswap.json  free_qwen2512_generator.json  free_zimage_generator.json  pro_influencer_dataset.json  pro_multi_model_studio.json  pro_reference_generator.json
